[package]
name = "advent-2022"
version = "0.1.0"
authors = ["Austin Lake <53884490+austinlucaslake@users.noreply.github.com>"]
edition = "2021"
description = "Advent of Code 2022."
readme = "https://github.com/austinlucaslake/advent/blob/2022/README.md"
repository = "https://github.com/austinlucaslake/advent/tree/2022"
license = "Apache-2.0"

[dependencies]
color-eyre = "*"
tracing = "*"
tracing-subscriber = "*"
strum = { version = "*", features = ["derive"] }
